Version 0.3.5
=============

27.03.2011
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Upgraded to Rails 3
  * Reimplemented the fetching of user info/tweets with delayed_job

Version 0.3.4
=============

08.12.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated the CSS for polls
  * Introduced some flash messages

04.12.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Initial version of polls

Version 0.3.3
=============

12.10.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated the title for tag view

02.10.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Serbian locale introduced
  * Deployment scripts for localized version (temporary solution, will be replaced by better method)

05.09.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Introduced ajax action for following users
  * Cached and optimized user followings
  * Usernames in tweets are now linked
  * Bugfixes:
    - Fixed the bug which prevented creating lists
    - Initialize the selected filter for trending topics on refresh
    - Update user status when following
    - Additional error handling for following user check

04.09.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Created simple interface for switching between filters
  * Added follow button 

31.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Switched from httpauth to OAuth

29.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Defined scopes and methods for filtering tags
  * Implemented the functionality for switching between filters

28.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Removed the @anywhere script
  * Introduced method for checking if user is followed
  

22.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Automated hashtag linking

21.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Integration with Newrelic RPM