@@ -6,6 +6,7 @@ Version 0.3.5
   Peco Danajlovski <vortexmk@gmail.com>
   * Upgraded to Rails 3
   * Reimplemented the fetching of user info/tweets with delayed_job
+  * Updated the user update process to update screen names too
 
 Version 0.3.4
 =============
